--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ environment:
 
 dependencies:
   analyzer: ^0.29.1
-  angular2: ^2.2.0
+  angular2: 3.0.0-alpha+1
   uuid: ^0.5.0
   rxdart: any
   tuple: any
