--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,11 @@
 name: ng_grid
 description: Angular Grid Component
-version: 0.0.1
+version: 0.0.2
 environment:
   sdk: '>=1.19.0 <2.0.0'
 
 dependencies:
-  analyzer: ^0.29.1
-  angular2: 3.0.0-alpha+1
+  angular2: 3.1.0
   uuid: ^0.5.0
   rxdart: any
   tuple: any
@@ -19,6 +18,7 @@ dev_dependencies:
 
 transformers:
 - angular2:
+    use_legacy_style_encapsulation: true
     platform_directives:
     - 'package:angular2/common.dart#COMMON_DIRECTIVES'
     - 'package:ng2_state/common.dart#COMMON_DIRECTIVES'
