--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,20 @@
 name: ng_grid
 description: Angular Grid Component
-version: 0.0.2
+version: 0.0.3
 environment:
   sdk: '>=1.19.0 <2.0.0'
 
 dependencies:
   angular2: 3.1.0
   uuid: ^0.5.0
-  rxdart: any
-  tuple: any
+  rxdart: ^0.15.1
+  tuple: ^1.0.0
   ng2_state:
     git: git@github.com:frankpepermans/ng2_state.git
 
 dev_dependencies:
   browser: ^0.10.0
-  dart_to_js_script_rewriter: any
+  dart_to_js_script_rewriter: ^0.1.0
 
 transformers:
 - angular2:
